# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_parser.py  config_parser_demo.py  maze.txt  maze_run_output.txt  maze_test.py  output_maze.txt  pyproject.toml
mazegen/: algorithms.py  config_parser.py  generator.py  interface.py  pattern_42.py  renderer.py  solver.py  types.py  writer.py
src/: config_parser.py  renderer.py  solver.py  writer.py
