[project]
name = "mazegen"
version = "0.1.0"
description = "A maze generator and solver program. Generates perfect and imperfect mazes."
authors = [
    {name = "vzani-st"},
    {name = "kbentes-"}
]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["mazegen"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"